<resources>
    <string name="app_name">Pizza Tec</string>
    <string name="title_activity_principal_menu">PrincipalMenuActivity</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_comprar">Comprar</string>
    <string name="title_miscomprar">Mis Compras</string>
    <string name="title_notificaciones">Notificaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>