<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_inicio"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_usario"
        android:title="@string/title_perfil" />

    <item
        android:id="@+id/navigation_comprar"
        android:icon="@drawable/ic_pizza"
        android:title="@string/title_comprar" />

    <item
        android:id="@+id/navigation_miscompras"
        android:icon="@drawable/ic_carrito_compras"
        android:title="@string/title_miscomprar" />

    <item
        android:id="@+id/navigation_notificaciones"
        android:icon="@drawable/ic_notificaciones"
        android:title="@string/title_notificaciones" />

</menu>